<resources>
    <string name="app_name">CryptoTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gotodetail">GoToDetail</string>
    <string name="text1">text1</string>
    <string name="text2">text2</string>
    <string name="text3">text3</string>
    <string name="text4">text4</string>
    <string name="text5">text5</string>
    <string name="text6">text6</string>
    <string name="text7">text7</string>
</resources>