<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_detail_card_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="20dp"
        android:layout_margin="15dp"
        android:backgroundTint="#ACED9A">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_name"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text3"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_symbol"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txt_links"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text4"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_description"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txt_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text5"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_links"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txt_coingecko_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text6"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_image"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txt_market_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text7"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_coingecko_rank"
                android:layout_marginTop="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>